syntax = "proto3";

package message;

option go_package = "github.com/zikunw/grpc-throughput-test/message";

service Message {
    rpc Send (MessageRequest) returns (MessageResponse);
    rpc Stream (stream MessageRequest) returns (stream MessageResponse);
    rpc SendRepeated (RepeatedMessageRequest) returns (MessageResponse);
}

message MessageRequest {
    string message = 1;
}

message MessageResponse {
    string message = 1;
}

message RepeatedMessageRequest {
    repeated MessageRequest messages = 1;
}